src/main/java/org/example/assignmentsecurity/common/error/GlobalControllerExceptionHandler.java
package org.example.assignmentsecurity.common.error;

import org.example.assignmentsecurity.common.format.ApiResult;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class GlobalControllerExceptionHandler {

    @ExceptionHandler(BusinessException.class)
    public ResponseEntity<ApiResult<String>> businessHandler(BusinessException e) {
        return ResponseEntity.status(e.getErrorCode().getStatus())
                .body(ApiResult.error(e.getErrorCode()));
    }
}
